--- a/QuizApp.Data/appsettings.json
+++ b/QuizApp.Data/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server Sources=(LocalDB)\\MSSQLLocalDB;Database=QuizDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;Database=QuizDb;Trusted_Connection=True;MultipleActiveResultSets=true",
   }
   }
 
